src/test/ui/parser/variadic-ffi-4.stderr
error: only foreign functions are allowed to be C-variadic
  --> $DIR/variadic-ffi-4.rs:1:29
   |
LL | extern "C" fn foo(x: isize, ...) {
   |                             ^^^

error: aborting due to previous error

